ant cleanup build dir

--- a/examples/ssl-factory/build.xml
+++ b/examples/ssl-factory/build.xml
@@ -89,6 +89,7 @@
 	</target>
 
 	<target name="clean">
+		<delete dir="${build.dir}" />
 		<delete dir="${test.build.classes}" />
 	</target>
 </project>
