--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -53,3 +53,6 @@ enable_materialized_views: true
 enable_drop_compact_storage: true
 file_cache_enabled: true
 auto_hints_cleanup_enabled: true
+client_track_warnings_enabled: true
+client_large_read_warn_threshold_kb: 1024
+client_large_read_abort_threshold_kb: 4096
