--- a/test/conf/cassandra-sslcontextfactory-invalidconfiguration.yaml
+++ b/test/conf/cassandra-sslcontextfactory-invalidconfiguration.yaml
@@ -56,14 +56,11 @@ client_encryption_options:
             key1: "value1"
             key2: "value2"
             key3: "value3"
-    keystore: dummy-keystore
+            truststore: conf/.truststore
+            truststore_password: cassandra
+    keystore: conf/.keystore
+    keystore_password: cassandra
 server_encryption_options:
-    ssl_context_factory:
-        class_name: org.apache.cassandra.security.MissingSslContextFactoryImpl
-        parameters:
-            key1: "value1"
-            key2: "value2"
-            key3: "value3"
     internode_encryption: none
     keystore: conf/.keystore
     keystore_password: cassandra
