--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -53,6 +53,14 @@ enable_materialized_views: true
 enable_drop_compact_storage: true
 file_cache_enabled: true
 auto_hints_cleanup_enabled: true
-client_track_warnings_enabled: true
-client_large_read_warn_threshold_kb: 1024
-client_large_read_abort_threshold_kb: 4096
+track_warnings:
+    enabled: true
+    coordinator_read_size:
+        warn_threshold_kb: 1024
+        abort_threshold_kb: 4096
+    local_read_size:
+        warn_threshold_kb: 4096
+        abort_threshold_kb: 8192
+    row_index_size:
+        warn_threshold_kb: 4096
+        abort_threshold_kb: 8192
