--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -53,10 +53,14 @@ enable_materialized_views: true
 enable_drop_compact_storage: true
 file_cache_enabled: true
 auto_hints_cleanup_enabled: true
-client_track_warnings_enabled: true
-client_large_read_warn_threshold_kb: 1024
-client_large_read_abort_threshold_kb: 4096
-local_read_too_large_warning_threshold_kb: 4096
-local_read_too_large_abort_threshold_kb: 8192
-row_index_size_warning_threshold_kb: 4096
-row_index_size_abort_threshold_kb: 8192
+track_warnings:
+    enabled: true
+    client_large_read:
+        warn_threshold_kb: 1024
+        abort_threshold_kb: 4096
+    local_read_too_large:
+        warn_threshold_kb: 4096
+        abort_threshold_kb: 8192
+    row_index_size:
+        warn_threshold_kb: 4096
+        abort_threshold_kb: 8192
