Actively update auth caches in the background
Patch by Blake Eggleston; reviewed by Sam Tunnicliffe, Jason Brown, and Caleb Rackliffe for CASSANDRA-16957

Co-authored-by: Blake Eggleston <bdeggleston@gmail.com>
Co-authored-by: Josh McKenzie <jmckenzie@apache.org>

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -170,6 +170,8 @@ network_authorizer: AllowAllNetworkAuthorizer
 # after the period specified here, become eligible for (async) reload.
 # Defaults to 2000, set to 0 to disable caching entirely.
 # Will be disabled automatically for AllowAllAuthenticator.
+# For a long-running cache using roles_cache_active_update, consider
+# setting to something longer such as a daily validation: 86400000
 roles_validity_in_ms: 2000
 
 # Refresh interval for roles cache (if enabled).
@@ -177,13 +179,24 @@ roles_validity_in_ms: 2000
 # access, an async reload is scheduled and the old value returned until it
 # completes. If roles_validity_in_ms is non-zero, then this must be
 # also.
+# This setting is also used to inform the interval of auto-updating if
+# using roles_cache_active_update.
 # Defaults to the same value as roles_validity_in_ms.
+# For a long-running cache, consider setting this to 60000 (1 hour) etc.
 # roles_update_interval_in_ms: 2000
+
+# If true, cache contents are actively updated by a background task at the
+# interval set by roles_update_interval_in_ms. If false, cache entries
+# become eligible for refresh after their update interval. Upon next access,
+# an async reload is scheduled and the old value returned until it completes.
+# roles_cache_active_update: false
 
 # Validity period for permissions cache (fetching permissions can be an
 # expensive operation depending on the authorizer, CassandraAuthorizer is
 # one example). Defaults to 2000, set to 0 to disable.
 # Will be disabled automatically for AllowAllAuthorizer.
+# For a long-running cache using permissions_cache_active_update, consider
+# setting to something longer such as a daily validation: 86400000
 permissions_validity_in_ms: 2000
 
 # Refresh interval for permissions cache (if enabled).
@@ -191,8 +204,17 @@ permissions_validity_in_ms: 2000
 # access, an async reload is scheduled and the old value returned until it
 # completes. If permissions_validity_in_ms is non-zero, then this must be
 # also.
+# This setting is also used to inform the interval of auto-updating if
+# using permissions_cache_active_update.
 # Defaults to the same value as permissions_validity_in_ms.
+# For a longer-running permissions cache, consider setting to update hourly (60000)
 # permissions_update_interval_in_ms: 2000
+
+# If true, cache contents are actively updated by a background task at the
+# interval set by permissions_update_interval_in_ms. If false, cache entries
+# become eligible for refresh after their update interval. Upon next access,
+# an async reload is scheduled and the old value returned until it completes.
+# permissions_cache_active_update: false
 
 # Validity period for credentials cache. This cache is tightly coupled to
 # the provided PasswordAuthenticator implementation of IAuthenticator. If
@@ -203,6 +225,8 @@ permissions_validity_in_ms: 2000
 # underlying table, it may not  bring a significant reduction in the
 # latency of individual authentication attempts.
 # Defaults to 2000, set to 0 to disable credentials caching.
+# For a long-running cache using credentials_cache_active_update, consider
+# setting to something longer such as a daily validation: 86400000
 credentials_validity_in_ms: 2000
 
 # Refresh interval for credentials cache (if enabled).
@@ -210,8 +234,17 @@ credentials_validity_in_ms: 2000
 # access, an async reload is scheduled and the old value returned until it
 # completes. If credentials_validity_in_ms is non-zero, then this must be
 # also.
+# This setting is also used to inform the interval of auto-updating if
+# using credentials_cache_active_update.
 # Defaults to the same value as credentials_validity_in_ms.
+# For a longer-running permissions cache, consider setting to update hourly (60000)
 # credentials_update_interval_in_ms: 2000
+
+# If true, cache contents are actively updated by a background task at the
+# interval set by credentials_update_interval_in_ms. If false (default), cache entries
+# become eligible for refresh after their update interval. Upon next access,
+# an async reload is scheduled and the old value returned until it completes.
+# credentials_cache_active_update: false
 
 # The partitioner is responsible for distributing groups of rows (by
 # partition key) across nodes in the cluster. The partitioner can NOT be
