CASSANDRA-17009 Adds unit tests to sstableverify operate on SSTables
sstableverify tests didn't cover the case of exercising the verifyier for sstables.
Added unit tests to verify this and several corrupt scenarios.

test/data was marked as git ignore, despite it containing files for use.
Added an exception to the gitignore so forcing test data files is no longer necessary.

There are some small bugs found which will be in subsequent jiras.
(Return codes being wrong, etc).

    - Jira : https://issues.apache.org/jira/browse/CASSANDRA-17009

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ src/gen-java/
 src/resources/org/apache/cassandra/config/
 logs/
 data/
+!test/data
 conf/hotspot_compiler
 doc/cql3/CQL.html
 doc/build/
